<resources>
    <string name="app_name">SlushFlicks</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_search">Search</string>
    <string name="title_about">About</string>
    <string name="long_dummy_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="text_movie">Movie</string>
    <string name="error_message">Something went wrong. Please try again later</string>
    <string name="update_failed_error_message">Failed to update</string>
    <string name="text_developed_by">Developed by Sifat.Oshan</string>
    <string name="des_poster_image">poster_image</string>
    <string name="play_image">play_image</string>
    <string name="text_overview">Overview</string>
    <string name="install_youtube">Please install youtube to view this trailer</string>
    <string name="text_cast">Cast</string>
    <string name="recommended_error_message">Could not fetched recommended list</string>
    <string name="similar_error_message">Could not fetched similar list</string>
    <string name="text_recommended">Recommended</string>
    <string name="text_similar">Similar</string>
    <string name="text_review">Review</string>
    <string name="text_review_not_found">Review Not Found</string>
    <string name="text_tvshow">Tv Show</string>
    <string name="text_last_episode">Last Episode</string>
    <string name="text_next_episode">Next Episode</string>
    <string name="text_season">Seasons</string>
    <string name="seasons">Seasons:</string>
    <string name="text_episode">Episode</string>
    <string name="episodes">Episodes:</string>
    <string name="text_directed_by">directed by</string>
    <string name="text_episode_count">Episode Count:</string>
    <string name="text_th">%dth Episode</string>
    <string name="text_st">%dst Episode</string>
    <string name="text_nd">%nd Episode</string>
    <string name="dynamic_link_domain">slushflicks.page.link</string>
    <string name="title_share">Share</string>
    <string name="text_friend_message">Hey,\nCheck this out\nLink: %s</string>
    <string name="text_share_to">Share to...</string>
    <string name="error_no_app_found">No application found to share.</string>
    <string name="error_failed_to_short_link">Failed to create sharable link. Try again</string>
    <string name="text_search">Search</string>
    <string name="text_search_show">Search your show</string>
    <string name="text_filter">Filter</string>
    <string name="text_done">Done</string>
    <string name="text_tv_series">TV Series</string>
    <string name="text_no_result_found">No %s Found for Query \"%s\"</string>
    <string name="text_no_recent_result_found">No Recent %s Found</string>
    <string name="text_not_found">No Result Found</string>
    <string name="developed_by">Developed by:</string>
    <string name="email">code.cameo92@gmail.com</string>
    <string name="text_architecture">Architecture</string>
    <string name="mvvm_nmvi">MVVM\nMVI</string>
    <string name="kotlin">Kotlin</string>
    <string name="text_language">Language</string>
    <string name="text_libraries_and_components">Libraries and Components</string>
    <string name="libraries_components_list">ViewModel\nLiveData\nRoom\nCorotuine\nPaging Library\nNavigation Component\nDataBinding\nDagger2\nRetrofit\nFirebase</string>
    <string name="text_appreciation">In Appreciation</string>
    <string name="reference_list">Architecture Components Samples\nSunflower App from Google\nCodingWithMitch.com</string>
</resources>
