<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.about.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/standard_margin">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivAppLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="@dimen/default_radius" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/title_font"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAppLogo" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:textColor="@color/dark_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAppName"
                tools:text="v1.0.0" />

            <TextView
                android:id="@+id/tvDevelopedByTitle"
                style="@style/DetailsTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/developed_by"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVersion" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/email"
                android:textColor="@color/dark_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDevelopedByTitle" />

            <TextView
                android:id="@+id/tvAppreciationTitle"
                style="@style/DetailsTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/text_appreciation"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <TextView
                android:id="@+id/tvAppreciation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/reference_list"
                android:textColor="@color/dark_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAppreciationTitle" />

            <TextView
                android:id="@+id/tvLanguageTitle"
                style="@style/DetailsTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/text_language"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAppreciation" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/kotlin"
                android:textColor="@color/dark_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLanguageTitle" />

            <TextView
                android:id="@+id/tvArchitectureTitle"
                style="@style/DetailsTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/text_architecture"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLanguage" />

            <TextView
                android:id="@+id/tvArchitecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/mvvm_nmvi"
                android:textColor="@color/dark_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvArchitectureTitle" />

            <TextView
                android:id="@+id/tvComponentTitle"
                style="@style/DetailsTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/text_libraries_and_components"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvArchitecture" />

            <TextView
                android:id="@+id/tvComponent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/libraries_components_list"
                android:textColor="@color/dark_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvComponentTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>